# uwu-thing-lol

Backend/: PixelFlut.sln
Backend/FixelPlut.Server/: 1.txt  Dockerfile  FixelPlut.Server.csproj  Program.cs  WeatherForecast.cs
Backend/FixelPlut.Server/Controllers/: InstructionsController.cs  PingPongController.cs  QueueController.cs
Backend/FixelPlut.Server/Properties/: launchSettings.json
Backend/FixelPlut.Server/Services/: FromFileService.cs  FromPingPongService.cs  ILoaderService.cs  IQueueService.cs  QueueService.cs
Backend/FixelPlut.Shared/Models/: PingPongTick.cs  WorkItem.cs
Backend/FixelPlut.Test/: Dockerfile  FixelPlut.Client.csproj  InstructionService.cs  ModdedTcpClient.cs  Program.cs
Backend/FixelPlut.Test/Properties/: launchSettings.json
Backend/PixelFlut/: Generator.cs  PixelFlut.csproj  Program.cs
Backend/PixelFlut.Server/: Dockerfile  PixelFlut.Server.csproj  PixelFlut.Server.http  Program.cs  WeatherForecast.cs
Backend/PixelFlut.Server/Controllers/: QueueController.cs  WeatherForecastController.cs
Backend/PixelFlut.Server/Properties/: launchSettings.json
Backend/PixelFlut.Server/Services/: PrepService.cs  QueueService.cs
Backend/PixelFlut.Shared/: QueueItem.cs
Backend/PixelFlut.SimpleClient/: Program.cs
Backend/PixelFlut.Web/: Program.cs  _Imports.razor
Backend/PixelFlut.Web/Pages/: Index.razor
Backend/PixelFlut.Web/Properties/: launchSettings.json
Backend/PixelFlut.Web/Services/: ComService.cs
Backend/PixelFlut.Web/wwwroot/: index.html  manifest.json
client/: Cargo.toml
client/src/: main.rs
game/: pong.py
(+148 files in other folders)
