[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.42.0", features = ["full"] }
